--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,6 +5,8 @@
     <string name="hello_world">Hello world!</string>
     <string name="action_settings">Settings</string>
 
+    <string name="app_label">Search</string>
+    <string name="search_hint">Search for Mod</string>
 
     <string name="Sem_One">Semester One</string>
     <string name="Sem_Two">Semester Two</string>
@@ -29,4 +31,5 @@
 
 <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="title_activity_searchactivity">searchactivity</string>
 </resources>
